replace joi with zod

--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
-    "joi": "^17.12.2",
-    "joi-browser": "^13.4.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.2"
+    "react-hook-form": "^7.51.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.73",
